hphp/hack/test/typecheck/array/safe_vector_array/disallow_varray_with_wrong_key_type_where_varray_or_darray_is_required.php
<?hh

function test1(): varray_or_darray<string, int> {
  return vec[0]; // error
}

function test2(): varray_or_darray<int, int> {
  return vec[0]; // ok
}
